@@ -3,7 +3,7 @@
 use FindBin;
 BEGIN { $ENV{DANCER_APPDIR} = $FindBin::Bin }
 
-use Test::More tests => 36, import => ["!pass"];
+use Test::More tests => 49, import => ["!pass"];
 
 use Dancer;
 use Dancer::Test;
@@ -13,6 +13,12 @@ BEGIN {
   set plugins => {
     SporeDefinitionControl => {
       spore_spec_path => "sample_route.yaml",
+      spore_spec_with_options => 1,
+      spore_spec_allow_credentials => 'true',
+      spore_spec_allow_headers => 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Cookie,X-Weborama-UserAuthToken,X-Weborama-Account_Id',
+      spore_spec_allow_origin => '*',
+      spore_spec_max_age => '1728000',
+      
     },
   };
 }
@@ -65,3 +71,18 @@ response_status_is ['DELETE' => '/object/12', $params3], 400, "DELETE unknown pa
 response_content_is ['DELETE' => '/object/12', $params3], '{"error":"parameter `test\' is unknown"}', "DELETE param is unknown";
 response_status_is ['DELETE' => '/nimportequoi/12', $params1], 404, "DELETE route pattern is not defined";
 response_content_is ['DELETE' => '/nimportequoi/12', $params1], '{"error":"route pattern `/nimportequoi/:id\' is not defined"}', "DELETE required param is missing";
+
+
+response_status_is ['OPTIONS' => '/object/12'], 200, "OPTIONS Route exists on object";
+response_content_is ['OPTIONS' => '/object/12'], '{"status":200,"message":"OK"}', "OPTIONS route response is ok";
+response_headers_include ['OPTIONS' => '/object/12'], [ 'Access-Control-Allow-Credentials' => 'true' ];
+response_headers_include ['OPTIONS' => '/object/12'], [ 'Access-Control-Allow-Methods' => 'PUT,DELETE,GET,OPTIONS' ];
+response_headers_include ['OPTIONS' => '/object/12'], [ 'Access-Control-Allow-Origin' => '*' ];
+response_headers_include ['OPTIONS' => '/object/12'], [ 'Access-Control-Max-Age' => '1728000' ];
+response_content_is ['OPTIONS' => '/anotherobject'], '{"status":200,"message":"OK"}', "OPTIONS route response is ok";
+response_headers_include ['OPTIONS' => '/anotherobject'], [ 'Access-Control-Allow-Credentials' => 'true' ];
+response_headers_include ['OPTIONS' => '/anotherobject'], [ 'Access-Control-Allow-Methods' => 'GET,POST,OPTIONS' ];
+response_headers_include ['OPTIONS' => '/anotherobject'], [ 'Access-Control-Allow-Origin' => '*' ];
+response_headers_include ['OPTIONS' => '/anotherobject'], [ 'Access-Control-Max-Age' => '1728000' ];
+response_status_is ['OPTIONS' => '/anotherobject/12'], 404, "OPTIONS route pattern is not defined";
+response_status_is ['OPTIONS' => '/nimportequoi/12', $params1], 404, "OPTIONS route pattern is not defined";
