@@ -3,7 +3,7 @@
 use FindBin;
 BEGIN { $ENV{DANCER_APPDIR} = $FindBin::Bin }
 
-use Test::More tests => 3, import => ["!pass"];
+use Test::More tests => 5, import => ["!pass"];
 
 use Dancer;
 use Dancer::Test;
@@ -13,6 +13,7 @@ BEGIN {
   set plugins => {
     SporeDefinitionControl => {
       spore_spec_path => "sample_route_no_put.yaml",
+      spore_spec_with_options => 1,
     },
   };
 }
@@ -28,4 +29,6 @@ response_status_is ['GET' => '/object/12', $params1], 200, "GET method is OK";
 # No PUT spore specification
 response_status_is ['PUT' => '/object/12', $params1], 404, "PUT method is missing in spore specification";
 response_content_is ['PUT' => '/object/12', $params1], '{"error":"no route define with method `PUT\'"}', "PUT method is missing in spore specification";
+response_status_is ['OPTIONS' => '/object/12', $params1], 200, "OPTIONS routes is active because spore_spec_with_options is set";
+response_headers_include ['OPTIONS' => '/object/12'], [ 'Access-Control-Allow-Credentials' => '' ];
 
