@@ -1,4 +1,6 @@
 Revision history for Dancer-Plugin-SporeDefinitionControl
+        
+        add the capability to manage method OPTIONS (Frederic Lechauve)
 
 0.14    2016-02-24, Nicolas Oudard
         Fix typo in error message when a parameter is wrong (Simon Lenne)
